heatmaply 0.15.3 (2019-01-18)
===============

## BUGFIXES
* heatmaply
  - Supplying label_names could cause incorrect orientation of side colors
  - Using plot_method="plotly" could cause incorrect interpretation of colour 
    strings.
## NOTES
* heatmaply
  - Use `plotly::orca` for saving to file, rather than `plotly::export`

heatmaply 0.15.2 (2018-07-06)
===============

## BUGFIXES
* heatmaply
  - labels did not show (only numbers)


heatmaply 0.15.0 (2018-06-23)
===============

## NEW FEATURES
* heatmaply
  - Side colour plot legends will now have the title of the column when there is only one column used.
## BUGFIXES
* heatmaply
  - heatmaply would scramble rownames when manually supplied via labrow or labcol
  - Minor bugfixes relating to the use of the `node_size_mat` argument.
  - handle cases with row/col names are not all unique. fix #155
  - resolve some test errors.


heatmaply 0.14.1 (2018-02-01)
================

### BUGFIXES
* heatmaply
  - hover text didn't show sometimes.
  - If `custom_hovertext` is not a matrix - it is turned into a matrix (important if inserting a data.frame). Fix issue #151



heatmaply 0.14.0 (2018-01-20)
================

### NEW FEATURES
* heatmaply
  - Add `custom_hovertext` argument, adding custom hovertext option
  - Add `label_format_fun` argument, which formats text before adding to
    hovertext
  - Row and column annotation legends are now ordered according to factor
    levels, or by default, are sorted (the previous default behaviour).
  - Add `node_type argument, which allows users to plot the heatmap with
    discs rather than squares. See also the `point_size_mat` argument.
  - Add `point_size_mat` argument, which is mapped to point size when
    `node_type="scatter"`. Also adds `point_size_name` argument, which is the
    name of this parameter in the heatmap hovertext.

### BUGFIXES
* heatmaply
  - Fixed a bug where column/row annotation
    legend labels would overlap when only two levels were present.
