@@ -6,6 +6,10 @@ heatmaply 0.15.3 (2019-01-18)
   - Supplying label_names could cause incorrect orientation of side colors
   - Using plot_method="plotly" could cause incorrect interpretation of colour 
     strings.
+## NEW FEATURES
+* heatmaply
+  - The boolean argument dend_hoverinfo can control whether hoverinfo is shown
+    for the row and column dendrograms.
 ## NOTES
 * heatmaply
   - Use `plotly::orca` for saving to file, rather than `plotly::export`
